drills: kernel stack-based buffer overflow

--- a/drills/Makefile
+++ b/drills/Makefile
@@ -1,6 +1,11 @@
 ccflags-y += -g -DDEBUG -O0
 obj-m := ${MODULE_NAME}-module.o
 
+# disable canary stack protection for 'stack-overflow-module.c':
+ifeq ($(MODULE_NAME),stack-overflow)
+    ccflags-y += -fno-stack-protector
+endif
+
 clean:
 	rm -f .*.cmd
 	rm -f *.o
